<resources>
    <string name="app_name">Trending Android Repo</string>
    <string name="repo_stars">121</string>
    <string name="repo_title">Title</string>
    <string name="repo_url">Url</string>
    <string name="repo_description">Description</string>
    <string name="created_date">Created:</string>
    <string name="date_detail">date</string>
    <string name="repo_language">Language:</string>
    <string name="lang_detail">Java</string>
    <string name="repo_stars_rating_image">Number of Stars Repositories received</string>
    <string name="number_of_stars_for_repo">121</string>
</resources>
