<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReposDetailActivity">

    <TextView
        android:id="@+id/titleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:fontFamily="@font/roboto_bold"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/twenty_four_sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/repo_title" />

    <TextView
        android:id="@+id/urlId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:autoLink="web"
        android:fontFamily="@font/roboto_medium"
        android:linksClickable="true"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/fifteen_sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleId"
        tools:text="@string/repo_url" />

    <TextView
        android:id="@+id/descriptionId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:fontFamily="@font/roboto_medium"
        android:textAlignment="center"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/twenty_sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urlId"
        tools:text="@string/repo_description" />

    <TextView
        android:id="@+id/createdId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/created_date"
        android:textColor="@android:color/black"
        android:textSize="@dimen/fifteen_sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionId" />

    <TextView
        android:id="@+id/dateId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/date_detail"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/createdId"
        app:layout_constraintTop_toBottomOf="@+id/descriptionId" />

    <TextView
        android:id="@+id/codeLanguageId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/repo_language"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toStartOf="@+id/languageId"
        app:layout_constraintTop_toBottomOf="@+id/descriptionId" />

    <TextView
        android:id="@+id/languageId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionId"
        tools:text="@string/lang_detail" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/fifty_eight_dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/forty_dp"
        android:contentDescription="@string/repo_stars_rating_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionId"
        app:srcCompat="@drawable/ic_stars" />

    <TextView
        android:id="@+id/numberStarsId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/twenty_four_sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/number_of_stars_for_repo" />
</android.support.constraint.ConstraintLayout>